# focus-guard-desktop

./: .gitignore  README.md  SYNC.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocking.rs  lib.rs  main.rs  state.rs  sync_server.rs  tracking.rs
src/app/: FocusGuardClient.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/block-overlay/: BlockOverlayClient.tsx  page.tsx
src/app/tray-popup/: TrayPopupClient.tsx  page.tsx
src/components/focus-guard/: AnalyticsCard.tsx  DesktopAppTracker.tsx  QuickAccess.tsx  SettingsModal.tsx  StudyLogModal.tsx  TaskList.tsx  TimerRing.tsx
src/lib/: helpers.ts  store.ts  sync-bridge.ts  tauri.ts  types.ts
